Fixed proxy server not support CONNECT method
After testing with Prowlarr, I realized that Prowlarr test the proxy server by using a CONNECT request, so I had to add a hack job method of supporting that.
Prowlarr also does something weird with their Cardigann login POST requests so I switched to using GET requests to login.
Selenium login method was flawed, because Prowlarr requests the browse.php page before trying to login, and the getPageSource function was switching tabs which did something weird to the login page and made the form submission fail.

--- a/abtorrents-proxy.yml
+++ b/abtorrents-proxy.yml
@@ -1,7 +1,7 @@
 ---
-id: abtorrents
-name: ABtorrents
-description: "ABtorrents (ABT) is a Private Torrent Tracker for AUDIOBOOKS"
+id: abtorrents-proxy
+name: ABtorrents-Proxy
+description: "ABtorrents (ABT) is a Private Torrent Tracker for AUDIOBOOKS. Modified for ABTorrents-proxy docker"
 language: en-US
 type: private
 encoding: UTF-8
@@ -107,13 +107,13 @@ settings:
     default: "Account retention rules:<ol><li>Any account that has unread PMs older than 14 days or has not logged in for 30 days will be suspended</li><li>Any account that has not been logged into for 90 days is deemed inactive and will thus be purged</li><li>Any account that has not been logged into for 30 days is deemed inactive and will be put on suspension until User logs in again</li><li>User’s stats, points, and history are irrevocably lost when purged</li><li>Logging into the site is the ONLY way to keep an account active</li><li>SEEDING ONLY does NOT constitute site activity.</li></ol>"
 
 login:
-  method: post
+  method: get
   path: doLogin.py
   inputs:
     username: "{{ .Config.username }}"
     password: "{{ .Config.password }}"
   error:
-    - selector: #login_failed
+    - selector: span:contains("login failed")
   test:
     path: index.php
     selector: a[href*="logout.php?hash_please="]
